gcc/testsuite/gdc.test/compilable/imports/test17441foo/package.d
module imports.test17441foo;
