gcc/testsuite/gdc.test/fail_compilation/imports/test5412a.d
module imports.test5412a;
